# my-bird-app

./: app.py  pyproject.toml  requirements.txt
instance/: app.db
migrations/versions/: d56e98b4728b_create_table_birds.py
